adding better design and auto complete for source table and fields
